--- a/assignment1/Assignment1/.project
+++ b/assignment1/Assignment1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>src_assignment1</name>
+	<name>Assignment1</name>
 	<comment></comment>
 	<projects>
 	</projects>
